new changes map

--- a/css/orthoplan-app.css
+++ b/css/orthoplan-app.css
@@ -75,11 +75,24 @@
 
 
 /*******************************************/
+/*********** OFFICES ******************/
+/*******************************************/
+#map {
+    height: 300px;
+    width: 100%;
+
+}
+
+.card{
+    margin: 0px!important;
+}
+
+/*******************************************/
 /*********** HOME  SCREEN ******************/
 /*******************************************/
 
 
- 
+
 .preloader-jhome-news{
     display: block;
     margin: 0 auto;
